--- a/style.css
+++ b/style.css
@@ -79,7 +79,8 @@ body {
 }
 
 .toggle-icon {
-	color: #212121;
+	color: goldenrod;
+	transform: rotate(18deg);
 }
 
 .toggle-ball {
@@ -100,4 +101,14 @@ body {
 	background-color: #212121;
 	position: fixed;
 	top: 0;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding-top: 60px;
+}
+
+.sidebar-icon {
+	color: #fff;
+	font-size: 20px;
+	margin-bottom: 40px;
 }
