--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
 
 .logo {
 	font-size: 30px;
-	color: #2eb086;
+	color: #54e346;
 }
 
 /* menu */
@@ -91,6 +91,7 @@ body {
 	right: 1px;
 	border-radius: 50%;
 	cursor: pointer;
+	transition: 1s ease all;
 }
 
 /* SIDEBAR */
@@ -111,4 +112,185 @@ body {
 	color: #fff;
 	font-size: 20px;
 	margin-bottom: 40px;
+}
+
+/* CONTAINER */
+
+.container {
+	background-color: #151515;
+	min-height: calc(100vh - 50px);
+	color: #fff;
+}
+
+.content-container {
+	margin-left: 50px;
+}
+
+/* Featured movies */
+.featured-content {
+	height: 50vh;
+	padding: 50px;
+}
+
+.featured-title {
+	width: 200px;
+}
+
+.featured-desc {
+	width: 500px;
+	color: rgb(221, 210, 210);
+	margin: 30px 0;
+}
+
+.featured-button {
+	background-color: #54e346;
+	color: #fff;
+	padding: 10px 20px;
+	border-radius: 10px;
+	border: none;
+	outline: none;
+	font-weight: bold;
+	cursor: pointer;
+}
+
+/* MOVIES LIST */
+
+.movie-list-container {
+	padding: 0 20px;
+}
+
+.movie-list-wrapper {
+	position: relative;
+	overflow: hidden;
+}
+
+.movie-list {
+	display: flex;
+	align-items: center;
+	height: 300px;
+	transform: translateX(0);
+	transition: all 1s ease-in-out;
+}
+
+.movie-list-item {
+	margin-right: 30px;
+	position: relative;
+}
+
+.movie-list-item:hover .movie-list-item-img {
+	transform: scale(1.2);
+	transition: all 0.5s ease-in-out;
+	margin: 0 30px;
+	opacity: 0.5;
+}
+
+.movie-list-item:hover .movie-list-item-title,
+.movie-list-item:hover .movie-list-item-desc,
+.movie-list-item:hover .movie-list-item-button {
+	opacity: 1;
+	transition: 1s all ease-in-out;
+}
+
+.movie-list-item-img {
+	width: 270px;
+	height: 200px;
+	object-fit: cover;
+	border-radius: 20px;
+}
+
+.movie-list-item-title {
+	background-color: #151515;
+	padding: 0 10px;
+	font-size: 32px;
+	font-weight: bold;
+	position: absolute;
+	top: 10%;
+	left: 50px;
+	opacity: 0;
+}
+
+.movie-list-item-desc {
+	background-color: #151515;
+	padding: 10px;
+	font-size: 14px;
+	position: absolute;
+	top: 30%;
+	left: 50px;
+	width: 230px;
+	opacity: 0;
+}
+
+.movie-list-item-button {
+	padding: 10px;
+	background-color: #54e346;
+	color: #fff;
+	border-radius: 10px;
+	outline: none;
+	border: none;
+	cursor: pointer;
+	position: absolute;
+	bottom: 15px;
+	left: 50px;
+	opacity: 0;
+}
+
+/* ARROW */
+
+.arrow {
+	font-size: 120px;
+	position: absolute;
+	top: 90px;
+	right: 0;
+	color: lightgrey;
+	opacity: 0.5;
+	cursor: pointer;
+}
+
+/* TOGGLE ACTIVE */
+.container.active {
+	background-color: #fff;
+}
+
+.movie-list-title.active {
+	color: #151515;
+}
+
+.navbar-container.active {
+	background-color: #fff;
+	color: #151515;
+}
+
+.sidebar.active {
+	background-color: #fff;
+}
+
+.sidebar-icon.active {
+	color: #151515;
+}
+
+.toggle.active {
+	background-color: #151515;
+}
+
+.toggle-ball.active {
+	background-color: #fff;
+	transform: translateX(-20px);
+}
+
+/* RESPONSINENESS */
+
+@media only screen and (max-width: 940px) {
+	.menu-container {
+		display: none;
+	}
+	.featured-desc {
+		width: 250px;
+	}
+}
+
+@media screen and (max-device-width: 940px) and (min-device-width: 720px) {
+	.featured-desc {
+		width: 400px;
+		font-size: 20px;
+	}
 }
