--- a/style.css
+++ b/style.css
@@ -279,7 +279,7 @@ body {
 	transform: translateX(-20px);
 }
 
-/* RESPONSINENESS */
+/* RESPONSIVENESS */
 
 @media only screen and (max-width: 940px) {
 	.menu-container {
